syntax = "proto3";

package grapevineer;

option go_package = "github.com/esh2n/grapevineer/gen/go/grapevineer";

// Flower Meaning Related...

message GetFlowerMeaningByDateRequest {
    string date = 1;
}

message GetFlowerMeaningByDateResponse {
    string url = 1;
    string date = 2;
    string sumamry = 3;
    repeated Flower flowers = 4;
}

message Flower {
    string name = 1;
    string hanakotoba = 2;
    repeated string origin = 3;
    string image_source = 4;
}